--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.1.5",
     "@nestjs/core": "^11.1.5",
     "@nestjs/platform-express": "^11.1.5",
@@ -27,9 +28,11 @@
     "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.54.0",
     "@types/nodemailer": "^6.4.17",
+    "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.1",
     "nodemailer": "^7.0.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
